# rust-linkedin-mcp-branch

./: .gitignore  Cargo.toml  README.md  claude_desktop_config.json
src/: credentials.rs  linkedin.rs  main.rs  mcp.rs  tools.rs
