[package]
name = "linkedin-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json"] }
scraper = "0.21"
urlencoding = "2.1"
dirs = "6.0"
